styles.css
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Chivo+Mono&family=Oswald&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    text-decoration: none;
}

html {
    scroll-behavior: smooth;
}

#header {
    box-sizing: border-box;
    width: 100%;
    height: 70px;
    padding: 3rem;
    padding-left: 9rem;
    padding-right: 9rem;
    position: fixed;
    display: flex;
    align-items: center;
    justify-content: space-between;
    background: #171717;
}
   
#menu {
    display: flex;
    list-style: none;
    gap: 5rem;
    
}

.logo-header {
    background-color: #1071FF;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 50%;
    width: 50px;
    height: 50px;
    font-size: 19px;
    font-weight: 800;
    margin-left: 1rem;
}

.logo-header span {
    font-family: 'Barlow Condensed', sans-serif;
    font-size: 21px;
    font-weight: 800;
    color: black;
}

a {
    cursor: pointer;
    transition: .4s;
    font-family: 'Barlow Condensed', sans-serif;
    font-size: 22px;
    color: #fff;
}

a:hover {
    color: #1071FF;
}

#btn-mobile {
    display: none;
}

.main-container {
    background-color: #171717;
    width: 100%;
    height: 100vh;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    column-gap: 6.5rem;
    padding-bottom: 5rem;
}

.social-media {
    width: 3.5rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    row-gap: 20px;
    font-size: 30px;
    background-color: #262626;
    color: #fff;
    border-top-right-radius: 5px;
    padding: 10px;
}

.social-media i {
    transition: .2s;
    cursor: pointer;
}

.social-media i:hover {
    transform: scale(1.15)
}

.introduction-content {
    display: flex;
    flex-direction: column;
    row-gap: 15px;
}

.introduction-1 {
    font-family: 'Raleway', sans-serif;
    font-size: 20px;
    color: #D4D4D4;
}

.introduction-2 {
    font-family: "Barlow Condensed", sans-serif;
    font-size: 60px;
    color: #fff;
    font-weight: 700;
}

.introduction-style-2 {
    font-family: "Barlow Condensed", sans-serif;
    font-size: 60px;
    color: #1071FF;
    font-weight: 700;
}

.introduction-3 {
    color: #D4D4D4;
    font-family: Raleway, sans-serif;
    font-size: 20px;
    font-weight: 700;;
}

.introduction-style-3 {
    color: #1071FF;
    font-family: Raleway, sans-serif;
    font-size: 20px;
    font-weight: 700;;
}

.img-content {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 6rem;
}

.img-main {
    width: 22rem;
    height: 30rem;
}

.skills-container {
    width: 100%;
    height: 95vh;
    background-color: #262626;
    color: #fff;
    display: flex;
    justify-content: center;
    align-items: center;
}

.skills-content {
    width: 40%;
    display: flex;
    flex-direction: column;
    row-gap: 40px;
}

.skills-titulo {
    font-family: "Barlow Condensed", sans-serif;
    font-size: 48px;
}

.skills-introduction {
    font-family: Raleway, sans-serif;
    font-size: 20px;
}

.skills-box {
    display: flex;
    column-gap: 20px;
    row-gap: 20px;
    flex-wrap: wrap;
    
}

.skills {
    background-color: #1071FF;
    color: #000;
    font-family: Raleway, sans-serif;
    font-size: 20px;
    border-radius: 5px;
    padding: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.projects-container {
    width: 100%;
    height: 100vh;
    background-color: #171717;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.projects-content {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    row-gap: 30px;
    column-gap: 30px;

}

.projects-titulo {
    font-family: "Barlow Condensed", sans-serif;
    font-size: 48px;
    color: #ffff;
    margin-top: 80px;
    margin-bottom: 52px;
    
}

.projects-introduction {
    font-family: Raleway, sans-serif;
    font-size: 20px;
    color: #fff;
    margin-bottom: 60px;
}

.projects {
    background-color: #00C566;
    width: 20rem;
    height: 25rem;
    border-radius: 8px;
    transition: .3s;
    cursor: pointer;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    margin-bottom: 30px;
}

.projects:hover {
    transform: scale(1.05)
}

.projects-description {
    width: 100%;
    height: 30%;
    background-color:#1071FF;
    border-bottom-left-radius : 8px;
    border-bottom-right-radius: 8px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    row-gap: 15px;
}

.projects-name {
    font-family: "Barlow Condensed", sans-serif;
    font-size: 24px;
    font-weight: 700;
}

.projects-web {
    font-family: Raleway, sans-serif;
    font-size: 16px;
}

.contact-container {
    background-color: #262626;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.contact-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    row-gap: 30px;
    margin-top: 25px;
    margin-bottom: 35px;
}

.contact-titulo {
    font-family: "Barlow Condensed", sans-serif;
    font-size: 48px;
    color: #fff;
    margin-top: 70px;
}

.contact-box {
    font-family: Raleway, sans-serif;
    font-size: 18px;
    color: #ffff;
}

.contact-box form {
    display: flex;
    flex-direction: column;
    row-gap: 30px;
}

.contact-box label {
    display: flex;
    flex-direction: column;
    row-gap: 8px;
}

.contact-information {
    width: 490px;
    height: 47.6px;
    background-color: #262626;
    color: #fff;
    border: solid 1px #fff;
    border-radius: 5px;
    padding: 15px;
}

.contact-information-textarea {
   background-color: #262626;
   color: #fff;
   padding: 15px;
   min-width: 490px;
   max-width: 490px;
   min-height: 108px;
   height: 108px;
   border-radius: 5px;
   border: solid 1px #fff;
   font-size: 16px;
}

.contact-box button {
    width: 137px;
    height: 53px;
    background-color: #1071FF;
    border: none;
    border-radius: 8px;
    cursor: pointer;
    font-family: Raleway, sans-serif;
    font-size: 18px;
    transition: .5s;
}

.contact-box button:hover {
    background-color: #262626;
    color: #1071FF;
    border: solid 1px #1071FF;
}

.footer-container {
    height: 238px;
    background-color: #171717;
    color: #fff;
    display: flex;
    justify-content: center;
    align-items: center;
}

.footer-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    row-gap: 20px;
}

.footer-follow {
    font-family: "Barlow Condensed", sans-serif;
    font-size: 36px;
}
.footer-social-media {
    display: flex;
    column-gap: 20px;
}

.footer-social-media i {
    font-size: 30px;
    transition: .5s;
    cursor: pointer;
}

.footer-social-media i:hover {
    color: #1071FF;
}

.footer-copy {
    font-family: Raleway, sans-serif;
    font-size: 18px;
    margin-top: 25px;
}


@media(max-width: 768px) {

    #header {
        height: 70px;
        display: flex;
        justify-content: center;
        align-items: center;
    }

    .logo-header {
        position: absolute;
    }
    
    #menu {
        display: block;
        position: absolute;
        width: 100%;
        top: 70px;
        right: 0px;
        backdrop-filter: blur(3px);
        transition: .6s;;
        z-index: 1000;
        height: 0px;
        visibility: hidden;
        overflow-y: hidden;
    }
    
    #nav.active #menu {
        height: calc(100vh - 70px);
        visibility: visible;
        overflow-y: auto;
    }

    #menu li {
        padding: 1rem 0;
        margin: 0 1rem;
        border-bottom: 2px solid #262626;
        
    }

    #btn-mobile {
        display: flex;
        padding: .5rem 1rem;
        margin-left: 16rem;
        font-size: 1rem;
        border: none;
        background: none;
        color: white;
        cursor: pointer;
        gap: .5rem;
    }

    #hamburger {
        border-top: 2px solid;
        width: 20px;
    }

    #hamburger::after , #hamburger::before{
        content: '';
        display: block;
        width: 20px;
        height: 2px;
        background: currentColor;
        margin-top: 5px;
        transition: .3s;
        position: relative;
    }

    #nav.active #hamburger {
        border-top-color: transparent;
    }

    #nav.active #hamburger::before {
        transform: rotate(135deg);
    }

    #nav.active #hamburger::after {
        transform: rotate(-135deg);
        top: -7px;
    }

    .social-media {
        display: none;
    }
    
    .main-container {
        height: 100%;
        display: flex;
        flex-direction: column;
        padding-bottom: 2.5rem;
    }
    .introduction-content {
        text-align: center;
        padding: 2rem;
        margin-top: 5rem;
    }
    
    .introduction-2 {
        font-size: 30px;
    }

    .introduction-style-2 {
        font-size: 30px;
    }
    
    .img-content {
        margin-top: 0;

    }

    .img-main {
        width: 12rem;
        height: 17rem;
    } 

    .skills-container {
        padding: 3rem;
        height: 100%;
    }

    .skills-content {
        display: flex;
        justify-content: center;
        align-items: center;
        row-gap: 20px;
    }

    .skills-titulo {
        text-align: center;
        font-size: 30px;
    }

    .skills-introduction {
        text-align: center;
        font-size: 17px;
    }

    .skills-box {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        justify-content: center;
        align-items: center;
    }

    .skills {
        font-size: 17px;
        text-align: center;
    }

    .projects-container {
        height: 100%;
    }
    
    .projects-content {
        margin-bottom: 3rem;

    }

    .projects-titulo {
        font-size: 30px;
        margin-top: 40px;
        margin-bottom: 25px;
    }

    .projects-introduction {
        margin-left: 20px;
        margin-right: 20px;
        margin-bottom: 30px;
        text-align: center;
    }

    .projects {
        width: 17rem;
        height: 23rem;
        margin-bottom: 0;
    }

    .projects:hover {
        transform: none;
    }
    
    .contact-titulo {
        font-size: 40px;

    }

    .contact-information {
        width: 290px;
    }

    .contact-information-textarea {
        min-width: 290px;
        max-width: 290px;
    }

    .contact-box button {
        margin-left: 27%;
    }
    
    .footer-content {
        row-gap: 10px;

    }

    .footer-copy {
        font-size: 15px;
        text-align: center;
    }
}

